--- a/css/styles.css
+++ b/css/styles.css
@@ -187,32 +187,33 @@ background-size: cover;
     padding-top: 200px;
 }
 
-.text-button {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;    
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: var(--title-light-theme-color);
-    margin-left: auto;
-    margin-right: auto;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 
 .btn {
-    margin: 0 auto;
+
     display: flex;
     align-items: center;
-    width: 200px;
-    height: 50px;
-    background: #F5F4FA;;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    /* background-color: #F5F4FA; */
     border-radius: 4px; 
     cursor: pointer;
     border: none; 
     outline: none;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    padding-top: 10px;
+    padding-right: 32px;
+    padding-bottom: 10px;
+    padding-left: 32px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;    
+
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--title-dark-theme-color);
+    background-color: var(--accent-color); 
+    margin-left: auto;
+    margin-right: auto;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn:hover,
 .btn:focus {
@@ -221,9 +222,13 @@ background-size: cover;
 
 .text-button:hover,
 .text-button:focus {
-    color: var(--title-dark-theme-color)
+   color: var(--title-dark-theme-color); 
 }
 
+/* .btn-div:hover {
+    background-color: var(--accent-color);
+    color: var(--title-dark-theme-color);
+} */
 /*Преимущества*/ /********************* О НАС**********************/
 
 .about-us {
